src/assets/css/qrcode.css
/* Override section width to accommodate QR Code designs */
.login-functional {
    @media (min-width: 769px) {
        max-width: 479px !important;
    }
}



/* Override some styles on tablet-sized screens to prevent tab headings from wrapping into new lines */
@media (max-width: 1200px) and (min-width: 768px) {
  body.login-page-container .login-tabs li {
    font-size: 12px !important;
    padding: 10px 8px;

  }
}
/* Prevent undesired animation for certain properties when changing screen widths */
body.login-page-container .login-tabs li {
    transition: font-size 0s, padding 0s, line-height 0s !important;
}



/* Tab styling changes */
body.login-page-container .login-tabs {
    border-bottom: none;
}
body.login-page-container .login-tabs li {
    background-color: rgba(246, 246, 246, 0.85);
    box-shadow: 0px 1px 10px 0px rgba(138, 138, 150, 0.25);
    transition: all .5s;
}
body.login-page-container .login-tabs li.active {
    background-color: #FFFFFF;
    box-shadow: 0px 1px 20px 0px rgba(138, 138, 150, 0.25);
}
body.login-page-container .login-tabs li::after {
    content: "";
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2px;
    background: #E5ECF4;
    left: 0;
    transition: all .5s;
}
body.login-page-container .login-tabs li.active::after {
    height: 2px;
    background: #00B1F2;
}



/* QR Code login tab heading */
#selectQrCodeSection {
    @media (max-width: 768px) {
        display: none !important;
    }
}



/* QR Code login tab body */
#qrcode-login {
    box-sizing: border-box;
    margin-top: -40px;

    @media (max-width: 768px) {
        display: none !important;
    }

    @media (max-width: 1399px) and (min-width: 768px) {
        margin-top: -20px;
    }

    * {
        box-sizing: border-box;
    }

    img {
        max-width: 100%;
    }

    .qrcode-login-body {
        padding: 20px 16px 20px 20px;
        background: #F2F7FD;
        font-size: 12px;

        @media (max-width: 1200px) and (min-width: 768px) {
            padding: 20px;
        }
    }

    .qrcode-login-body-inner {
        display: flex;
        flex-direction: row;

        @media (max-width: 1200px) and (min-width: 768px) {
            flex-direction: column-reverse;
            align-items: center;
        }

        .qrlb-col-1 {
            width: 59.367946%;
            padding-right: 12px;

            @media (max-width: 1200px) and (min-width: 768px) {
                margin-top: 20px;
                padding-right: 0;
                width: 100%;
            }
        }

        .qrlb-col-2 {
            width: 40.632054%;

            @media (max-width: 1200px) and (min-width: 768px) {
                width: 48.109966%;
            }
        }
        .qrlb-col-2-inner {
            background: #ffffff;
            padding: 10px 20px 7px;
            box-shadow: 0px 1px 20px 0px rgba(213, 213, 234, 0.7);

            @media (max-width: 1200px) and (min-width: 768px) {
                padding: 10px 20px;
            }
        }

        .qrlb-heading {
            font-size: 14px;
            font-weight: 600;
            margin: 0;
        }
        .qrlb-subheading {
            font-weight: 700;
            text-align: center;
            margin: 0 auto 10px;
        }
        .qrlb-instructions {
            margin: 20px 0 0;
            padding: 0 0 0 20px;

            @media (max-width: 1200px) and (min-width: 768px) {
                margin: 10px 0 0;
                font-size: 12px;
            }

            li {
                margin-bottom: 16px;

                @media (max-width: 1200px) and (min-width: 768px) {
                    margin-bottom: 10px;
                }

                &:last-child {
                    margin-bottom: 0;
                }
            }
        }

        .qrcode-aspect-ratio-box {
            position: relative;
            height: 0;
            overflow: hidden;
            padding-top: 100%;
            border-radius: 12px;

            .qrcode-aspect-ratio-box-inner {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                box-shadow: 0px 1px 20px 0px rgba(213, 213, 234, 0.7);
                border-radius: 12px;
            }

            .qrlb-refresh-btn {
                display: none;
                position: absolute;
                top: 50%;
                left: 50%;
                transform: translate(-50%, -50%);
                width: 71.428571%;
                height: 71.428571%;
                border-radius: 9999px;
                background-color: #DAF5FF;

                &.qrlb-show-btn {
                    display: block;
                }

                .qrlb-refresh-btn-inner {
                    padding: 16px 20px;
                    display: flex;
                    flex-direction: column;
                    justify-content: center;
                    align-items: center;

                    @media (max-width: 1200px) and (min-width: 768px) {
                        padding: 10px;
                    }

                    .qrlb-refresh-btn-icon {
                        background-image: url('../img/refresh.svg');
                        background-size: cover;
                        height: 22px;
                        width: 22px;
                        margin-bottom: 10px;

                        @media (max-width: 1200px) and (min-width: 768px) {
                            height: 16px;
                            width: 16px;
                        }
                    }
                    .qrlb-refresh-btn-text {
                        font-weight: 700;
                    }
                }
            }
        }

        .qrlb-timer-container {
            margin-top: 10px;
            margin-bottom: 0;
            text-align: center;
            color: #8A8A96;
        }
        .qrlb-timer-text {
            font-weight: 700;
            color: #00b1f2;
        }

        .qrlb-blurred {
            filter: blur(4px);
        }
    }
}



/* Image switching styling */
#ImageAboveFooterOnLoginPage img {
    display: none;

    &.active {
        display: block;
    }
}



/* Prevent webpage from scrolling horizontally on Safari desktop */
.micro-logo-head {
    box-sizing: border-box;
}
/* Prevent webpage from scrolling horizontally on Safari mobile */
.container {
    box-sizing: border-box;
}



/* Override image width styles */
body.login-page-container .divide-form.order-first {
    @media (min-width: 768px) {
        box-sizing: border-box;
        padding-right: 10px;
    }

    img {
        @media (min-width: 768px) {
            width: 100% !important;
            height: auto !important;
            padding: 0 !important;
        }
    }
}

